Configuracion connectionString y Controller clientes

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "conexionMaestra": "data source=A01LINNO7759\\SQLEXPRESS;initial catalog=LaEzaDelivery;user=code;password=123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
