Modificación launchSettings para iniciar en api/clientes

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "conexionMaestra": "data source=A01LINNO7759\\SQLEXPRESS;initial catalog=LaEzaDelivery;user=code;password=123"
+    "conexionMaestra": "data source=A01LINNO7759\\SQLEXPRESS;initial catalog=LaEzaDelivery;Integrated Security=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
